tests/ui/resolve/missing-in-namespace.stderr
error[E0433]: failed to resolve: could not find `hahmap` in `std`
  --> $DIR/missing-in-namespace.rs:2:21
   |
LL |     let _map = std::hahmap::HashMap::new();
   |                     ^^^^^^ could not find `hahmap` in `std`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
